# samples

./: .gitignore  LICENSE.md  README.md
.circleci/: config.yml
bash/ionic-helloworld/: hello-world.sh  ionic-helloworld.sh
c/: .gitignore
c/chunk-decrypt/: .gitignore  Makefile  chunk-decrypt  chunk-decrypt.c
c/direct-keys/: Makefile  direct-keys.c
c/file-crypto-auto-decrypt/: Makefile  file-crypto-auto-decrypt.c
c/file-crypto-auto-encrypt/: Makefile  file-crypto-auto-encrypt.c
c/ionic-helloworld/: Makefile  ionic-helloworld.c
c/logging/: Makefile  logging.c
cpp/: IonicCppSamples.sdf  IonicCppSamples.sln  README.md
cpp/check-profiles/: CMakeLists.txt
cpp/check-profiles/src/: CheckProfiles.cpp
cpp/chunk-decrypt/: IonicChunkDecrypt.vcxproj  makefile
cpp/crypto-file-cipher-cms/: ionic-sample.sln
cpp/crypto-file-cipher-csv/: ionic-sample.sln
cpp/direct-keys/: IonicDirectKeys.vcxproj  makefile
cpp/file-crypto-auto-decrypt/: FileCryptoAutoDecrypt.vcxproj  makefile
cpp/file-crypto-auto-encrypt/: FileCryptoAutoEncrypt.vcxproj  makefile
cpp/get-key-on-behalf-of/: makefile
cpp/include/: CrossPlatform.h
cpp/ionic-helloworld/: CMakeLists.txt  IonicHelloWorld.vcxproj  build.sh  makefile
cpp/log-to-file/: CMakeLists.txt
cpp/logging/: Logging.vcxproj
cpp/sep-conversion/: SepConversion.vcxproj
csharp/: IonicCsSamples.sln  IonicSamples.sln  README.md
csharp/check-profiles/: CheckProfiles.sln
csharp_nuget/: IonicSamples.sln  README.md
java/: README.md
javascript/: README.md  consoleReroute.js  index.html  jssdkConfig.js
objc/: .gitignore
python/: README.md
(+613 files in other folders)
